# StellarCade

.claude/: settings.local.json
.githooks/: pre-push
.github/workflows/: lint.yml  test-contracts.yml  test-frontend.yml
backend/src/: server.js
contracts/: README.md
contracts/comprehensive-test-suite/: Cargo.toml
contracts/contract-address-registry/: Cargo.toml
contracts/cross-chain-bridge/: Cargo.toml
contracts/cross-chain-bridge/src/: lib.rs
contracts/daily-trivia/: Cargo.toml  README.md
contracts/deployment-scripts/: Cargo.toml  README.md
contracts/emergency-pause/: README.md
contracts/governance-token/: Cargo.toml
contracts/nft-reward/: Cargo.toml
contracts/oracle-integration/: Cargo.toml
contracts/pattern-puzzle/: Cargo.toml
contracts/reward-distribution/: Cargo.toml  README.md
contracts/staking/: Cargo.toml
contracts/upgrade-mechanism/: Cargo.toml
docs/contracts/: README.md  access-control.md  achievement-badge.md  ai-generated-game.md  balance-management.md  coin-flip.md  color-prediction.md  comprehensive-test-suite.md  contract-address-registry.md  contract-circuit-breaker.md  contract-health-registry.md  contract-interaction-library.md  contract-metadata-registry.md  contract-monitoring.md  contract-role-registry.md  contract-upgrade-timelock.md  cross-chain-bridge.md  cross-contract-call-guard.md  cross-contract-handler.md  daily-reward-emission.md  daily-trivia.md  dice-roll.md  dynamic-fee-policy.md  emergency-pause.md  epoch-scheduler.md  (+33 more)
frontend/: jest.config.cjs  package.json  pnpm-lock.yaml  vitest.config.ts
(+54 files in other folders)
